[package]
name = "rustyrop"
version = "0.1.0"
authors = ["Akul Pillai <contact@akulpillai.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
capstone = "0.7.0"
macho = "0.4.1"
elf = "0.0.10"
colored = "1.9.3"
clap = "2.33.1"
